--- a/war/static/css/home.css
+++ b/war/static/css/home.css
@@ -1,229 +1,48 @@
-/*--------
-  Homepage
-  --------*/
 
-/* Top */
-
-#top {
-  height: 349px;
-  position: relative;
-  background: url(/static/img/davy/gfx/screenshot.gif) no-repeat bottom right;
-}
-
-#homepage-notice {
-  margin: 10px auto;
+#home {
   width: 888px;
-  background: #ffc;
-  color: #000;
-  border: 2px solid #550;
-  font-size: 1.4em;
-  padding: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 120%;
 }
 
-#intro-left {
-	width: 340px;
-	float: left;
-	font-family: Arial, Helvetica, sans-serif;
-	text-shadow: 0 0 1px #18487F;
-	padding-top: 10px;
+#heading {
+  margin: 3em 0 1.5em 0;
 }
-	#intro-left h1 {
-		width: 210px;
-		position: relative;
-		padding: 57px 0 0 0;
-		overflow: hidden;
-		background: transparent url(/static/img/davy/gfx/home-logo2.gif) no-repeat top left;
-		height: 0px;
-		margin: 0 0 5px -8px;
-	}
-	#intro-left h2 {
-		color: #d1e5ff;
-		font-size: 1.5em;
-		font-weight: bold;
-		line-height: 1.2;
-	}
-		#intro-left h2 a {
-			color: #9ac6ff;
-			font-style: italic;
-			border-bottom: 2px solid;
-		}
-			#intro-left h2 a:hover {
-				text-decoration: none;
-				color: #4A91EE;
-			}
-	#intro-left p {
-		color: #fff;
-		font-size: 1.167em;
-		line-height: 1.3;
-		margin: 10px 0;
-	}
-	#intro-links {
-		position: absolute;
-		bottom: 17px;
-		left: -1px;
-                width: 500px;
-	}
-	#intro-links a {
-		display: block;
-		float: left;
-		position: relative;
-		padding: 64px 0 0 0;
-		overflow: hidden;
-		background-repeat: no-repeat;
-		background-position: top left;
-		height: 0;
-	}
-		#newpadbutton {
-			width: 212px;
-			background-image: url(/static/img/davy/btn/createpad-home.gif);
-			margin-right: 11px;
-		}
-		#betabutton {
-			width: 220px;
-			background-image: url(/static/img/davy/btn/signup-home-4.gif);
-		}
-
-/* Bottom */
-
-#bottom {
-  padding-top: 28px;
+#heading h1 {
+  font-size: 350%;
+  font-weight: bold;
+}
+#heading #subtitle {
+  color: #555;
+  font-style: italic;
+  font-size: 120%;
+}
+#heading #subtitle a {
+  color: #506980;
 }
 
-#quote {
-	border-bottom: 1px solid #e0e0e0;
-	padding-bottom: 24px;
-	text-shadow: 0 0 1px #F7F7F7;
-}
-	#quote q {
-		width: 680px;
-		float: left;
-		font-size: 1.33em;
-                height: 1.5em;
-	}
-	#quote #quote-right {
-		width: 200px;
-		float: right;
-		text-align: right;
-	}
-		#quote #quote-right cite {
-			display: block;
-			font-size: 1.33em;
-			font-style: italic;
-			margin-bottom: 8px;
-		}
-
-#features {
-	border-top: 1px solid #fff;
-	padding-top: 22px;
-	text-shadow: 0 0 1px #F7F7F7;
-}
-	#features li {
-		width: 213px;
-		float: left;
-		margin-left: 12px;
-	}
-	#features li.first {
-		margin-left: 0;
-	}
-	#features li img {
-		float: left;
-		margin-right: 8px;
-	}
-	#features li strong,
-	#features li span {
-		display: block;
-		margin-left: 40px;
-	}
-	#features li strong {
-		font-size: 16px;
-		font-weight: normal;
-		margin-bottom: 6px;
-	}
-	#features li span {
-		line-height: 17px;
-	}
-
-#uses {
-width: 675px;
-float: left;
-       margin-bottom: 28px;
-       margin-right: -12px;
-position: relative;
-}
-#uses li {
-width: 213px;
-float: left;
-       margin-right: 12px;
-}
-#uses li a {
-  font-size: 1.5em;
-  font-family: Calibri, Arial, Helvetica, sans-serif;
-  text-shadow: 0 1px 0 #fff;
-color: #214b7e;
-}
-#uses li a:hover {
-  text-decoration: none;
-color: #30619c;
-}
-#uses li .thumb {
-display: block;
-width: 213px;
-position: relative;
-padding: 123px 0 0 0;
-overflow: hidden;
-          background-repeat: no-repeat;
-          background-position: top left;
-height: 0px;
-             margin-top: 10px;
-}
-#uses #use-meetings .thumb { background-image: url(/static/img/davy/gfx/use-meetings.png); }
-#uses #use-programming .thumb { background-image: url(/static/img/davy/gfx/use-programming.png); }
-#uses #use-writing .thumb { background-image: url(/static/img/davy/gfx/use-writing.png); }
-#uses .more {
-display: block;
-position: absolute;
-padding: 21px 0 0 0;
-overflow: hidden;
-background: transparent url(/static/img/davy/btn/uses-more.gif) no-repeat top left;
-height: 0px;
-width: 58px;
-top: 0;
-right: 12px;
-       z-index: 10;
-}
-* html #uses .more {
-right: 24px;
+#buttons {
 }
 
-#quotes {
-width: 406px;
-float: left;
-background: #e0ecf9;
-border: 1px solid #8ba9cc;
-        border-left: 0;
-        border-right: 0;
-color: #334050;
-       font-family: Calibri, Arial, Helvetica, sans-serif;
-padding: 12px 16px 0;
-         text-shadow: 0 0 1px #e0ecf9;
+a.button {
+  border: 1px solid #ccc;
+  font-size: 120%;
+  padding: 1em;
+  margin: 1em 1em 1em 0;
+  display: block;
+  float: left;
+  background: #eee;
 }
-#quotes q {
-  font-size: 1.5em;
-  line-height: 1.22;
-display: block;
-         text-indent: -.45em;
+
+a.button:hover {
+  background: #afa;
 }
-#quotes cite {
-  font-size: 1.33em;
-display: block;
-         font-style: italic;
-         text-align: right;
-margin: .5em 0 1em;;
+
+#footer {
+  margin-top: 3em;
 }
-#quotes .more {
-	text-align: right;
-	margin-bottom: 1em;
-	position: relative;
-	right: -.75em;
-	font-size: 1.167em;
-}
+
+
+
+
