--- a/war/static/css/home.css
+++ b/war/static/css/home.css
@@ -26,23 +26,23 @@
 }
 
 a.button {
-  border: 1px solid #ccc;
   font-size: 120%;
+  border: 1px solid #ccc;
+  margin: 14px 14px 14px 0;
   padding: 1em;
-  margin: 1em 1em 1em 0;
   display: block;
   float: left;
-  background: #eee;
+  background: #005EAB;
+  color: #eee;
 }
 
 a.button:hover {
-  background: #afa;
+  border: 4px solid black;
+  margin: 11px 8px 11px 0;
 }
 
 #footer {
   margin-top: 3em;
 }
-
-
 
 
