--- a/war/WEB-INF/src/templates/main/home.ejs
+++ b/war/WEB-INF/src/templates/main/home.ejs
@@ -13,8 +13,9 @@ See the License for the specific language governing permissions and
 limitations under the License. */ %><% helpers.setHtmlTitle("EtherPad: Open-Sourced!"); %>
 
 <% helpers.includeCss("home.css"); %>
+<% helpers.setBodyId("home") %>
 
-<div id="home">
+<div id="main">
 
   <div id="heading">
     <h1>Aetherpad</h1>
