using static+ everywhere

--- a/war/WEB-INF/src/static/css/lib/jquery.contextmenu.css
+++ b/war/WEB-INF/src/static/css/lib/jquery.contextmenu.css
@@ -37,7 +37,7 @@
 .context-menu-theme-xp {
 	border:1px solid #666;
 	padding:1px;
-	background:#F9F8F7 url(/static/img/lib/jquery.contextmenu.images/cmenu-xp-bg.gif) repeat-y top left;
+	background:#F9F8F7 url(/static+/img/lib/jquery.contextmenu.images/cmenu-xp-bg.gif) repeat-y top left;
 }
 .context-menu-theme-xp .context-menu-separator {
 	margin:4px 2px;
@@ -65,7 +65,7 @@
 /* Windows Vista Theme */
 /* =================== */
 .context-menu-theme-vista {
-	background:#FAFAFA url(/static/img/lib/jquery.contextmenu.images/cmenu-vista-bg.gif) repeat-y left top;
+	background:#FAFAFA url(/static+/img/lib/jquery.contextmenu.images/cmenu-vista-bg.gif) repeat-y left top;
 	border:1px solid #868686;
 }
 .context-menu-theme-vista .context-menu-item {
@@ -82,7 +82,7 @@
 	border-bottom:1px solid #F5F5F5;
 }
 .context-menu-theme-vista .context-menu-item-hover {
-	background:transparent url(/static/img/lib/jquery.contextmenu.images/cmenu-vista-menu-item-hover.gif) repeat-x left center;
+	background:transparent url(/static+/img/lib/jquery.contextmenu.images/cmenu-vista-menu-item-hover.gif) repeat-x left center;
 	border:1px solid #D7D0B3;
 }
 .context-menu-theme-vista .context-menu-item .context-menu-item-inner {
@@ -166,7 +166,7 @@
 	border-bottom:1px solid #F5F5F5;
 }
 .context-menu-theme-human .context-menu-item-hover {
-	background:transparent url(/static/img/lib/jquery.contextmenu.images/cmenu-human-menu-item-hover.gif) repeat-x left center;
+	background:transparent url(/static+/img/lib/jquery.contextmenu.images/cmenu-human-menu-item-hover.gif) repeat-x left center;
 	border-color:#963;
 }
 .context-menu-theme-human .context-menu-item .context-menu-item-inner {
@@ -186,7 +186,7 @@
 /* Gloss Theme */
 /* =========== */
 .context-menu-theme-gloss {
-	background:#f4f4f4 url(/static/img/lib/jquery.contextmenu.images/cmenu-gloss-bg.gif) repeat-y left center;
+	background:#f4f4f4 url(/static+/img/lib/jquery.contextmenu.images/cmenu-gloss-bg.gif) repeat-y left center;
 	border:1px solid #f4f4f4;
 	padding:1px;
 	padding-right:0;
@@ -209,7 +209,7 @@
 	border-bottom:1px solid #F5F5F5;
 }
 .context-menu-theme-gloss .context-menu-item-hover {
-	background:transparent url(/static/img/lib/jquery.contextmenu.images/cmenu-gloss-menu-item-hover.gif) repeat-x left center;
+	background:transparent url(/static+/img/lib/jquery.contextmenu.images/cmenu-gloss-menu-item-hover.gif) repeat-x left center;
 	color:#fff;
 	border-color:#000;
   	border-radius: 3px;
@@ -231,12 +231,12 @@
 }
 
 .context-menu-theme-gloss-cyan .context-menu-item-hover {
-	background-image:url(/static/img/lib/jquery.contextmenu.images/cmenu-gloss-cyan-menu-item-hover.gif);
+	background-image:url(/static+/img/lib/jquery.contextmenu.images/cmenu-gloss-cyan-menu-item-hover.gif);
 	border-color:#00c;
 }
 
 .context-menu-theme-gloss-semitransparent .context-menu-item-hover {
-	background-image:url(/static/img/lib/jquery.contextmenu.images/cmenu-item-gloss-semitransparent-menu-item-hover.png);
+	background-image:url(/static+/img/lib/jquery.contextmenu.images/cmenu-item-gloss-semitransparent-menu-item-hover.png);
 	border-color:#00c;
 	background-color:#30f;
 }
