--- a/war/WEB-INF/src/templates/misc/channeltest.ejs
+++ b/war/WEB-INF/src/templates/misc/channeltest.ejs
@@ -9,51 +9,40 @@
 		<script>
 var socket;
 
-function explicate(obj) {
-	out = [];
-	for (var k in obj) {
-		if (obj.hasOwnProperty(k)) {
-			switch(typeof(obj[k])) {
-				case 'object':
-					out.push(k+": "+explicate(obj[k]));
-					break;
-				default:
-					out.push(k+": "+explicate(obj[k]));
-					break;
-			}
-		}
-	}
-	return " {" + out.join(", ") + " }";
-}
+//function explicate(obj) {
+//	out = [];
+//	for (var k in obj) {
+//		if (obj.hasOwnProperty(k)) {
+//			switch(typeof(obj[k])) {
+//				case 'object':
+//					out.push(k+": "+explicate(obj[k]));
+//					break;
+//				default:
+//					out.push(k+": "+explicate(obj[k]));
+//					break;
+//			}
+//		}
+//	}
+//	return " {" + out.join(", ") + " }";
+//}
 
-function zeroPad(num) {
-	if (num < 10) {
-		return "0"+num;
-	} else {
-		return ""+num;
-	}
-}
-
-function newMessage(date, msg) {
-	date = date.getMonth()+"/"+date.getDay()+"/"+date.getFullYear()+" "+zeroPad(date.getHours())+":"+zeroPad(date.getMinutes());
-	$("#msgtable").append($("<tr><td>"+date+"</td><td>"+msg+"</td></tr>"));
+function newClaim(text) {
+	$("#claimtable").append($("<tr><td>"+text+"</td></tr>"));
 }
 
 function handleSocketOpened() {
 	socket.send("join:");
-	$('#messageform').submit(function() {
-		socket.send("msg:"+$('#outmessage').val());
-		$('#outmessage').val("");
+	$('#grabform').submit(function() {
+		socket.send("grab:"+$("#username").val());
 		return false;
 	});
-	$('#sendbutton').removeAttr("disabled");
-	$('#outmessage').removeAttr("disabled");
+	$('#grabbutton').removeAttr("disabled");
 }
 
 $(function() {
-	var initialMessages = <%= messages %>.a;
-	for (var i = 0; i < initialMessages.length; ++i) {
-		newMessage(new Date(initialMessages[i].date), initialMessages[i].content);
+	var initialClaims = <%= claims %>.a;
+	for (var i = 0; i < initialClaims.length; ++i) {
+		newClaim(initialClaims[i].text);
 	}
 	socket = new WebSocket("channelcontrol.test-"+Math.random());
 	socket.onopen = function() {
@@ -61,19 +50,26 @@ $(function() {
 	}
 	socket.onmessage = function(evt) {
 		var msg = JSON.parse(evt.data);
-		if (msg.type == "msg") {
-			newMessage(new Date(msg.date), msg.content);
+		if (msg.type == "claim") {
+			newClaim(msg.text);
 		}
 	}
 	socket.open()
+
+	$("body").keypress(function(evt) {
+		if (evt.keyCode == 13) {
+		  $("#grabform").submit();
+		  evt.preventDefault();
+		}
+	});
 });
 		</script>
-		<table id="msgtable">
-			<tr><td></td><td></td></tr>
+		<table id="claimtable">
+			<tr><td></td></tr>
 		</table>
-		<form action="#" id="messageform">
-			<input type="text" name="message" id="outmessage" disabled="disabled" />
-			<input type="submit" name="Send" value="Send" id="sendbutton" disabled="disabled" />
+		<form action="#" id="grabform">
+			<input type="submit" name="Grab" value="Grab" id="grabbutton" disabled="disabled" />
 		</form>
+		<p>Name: <input type="text" id="username" /></p>
 	</body>
 </html>
