re-adding channeltest, adding sendMessageBatch to channel.js

--- a/war/WEB-INF/src/templates/misc/integergrab.ejs
+++ b/war/WEB-INF/src/templates/misc/integergrab.ejs
@@ -44,7 +44,7 @@ $(function() {
 	for (var i = 0; i < initialClaims.length; ++i) {
 		newClaim(initialClaims[i].text);
 	}
-	socket = new WebSocket("channelcontrol.test-"+Math.random());
+	socket = new WebSocket("integergrab.test-"+Math.random());
 	socket.onopen = function() {
 		handleSocketOpened();
 	}
