--- a/war/WEB-INF/src/templates/misc/integergrab.ejs
+++ b/war/WEB-INF/src/templates/misc/integergrab.ejs
@@ -2,11 +2,10 @@
 	<head>
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 		<% if (Packages.appjet.Util.isProduction()) { %>
-  		<script type="text/javascript" src="http://moishel.kir.corp.google.com:8113/talkgadget/channel.js"></script>
+  		<script type="text/javascript" src="http://www.corp.google.com/~moishel/channel.js"></script>
 		<% } else { %>
   		<script type="text/javascript" src="/_ah/channel/jsapi"></script>		  
 		<% } %>
-		<script type="text/javascript" src="/static+/js/jsapi.js"></script>
 		<script type="text/javascript" src="/static+/js/channel.js"></script>
 		<script type="text/javascript" src="/static+/js/json2.js"></script>
 	</head>
